bg random navbar fix

--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
             </nav>
         </div>
     </header>
+    <div class="bginicial">
+        <div class="container">
+            <div class="col-md-12 text-center content">
+                <h1>ENACTUS MAUA</h1>
+                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur sed, sequi ipsa eligen</h3>
+            </div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" 
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" 
