--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Enactus MAUA</title>
+    <title>Project Displayer MAUA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" 
         integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600" rel="stylesheet">
 </head>
-<body> <!-- Navbar será transparente mas irá colapsar após um breakpoint, 
-        ficando com a cor gradiente -->
+<body>
     <header id="header_area">
         <div class="container">
-            <nav class="navbar navbar-expand-sm navbar-light mb-3 bg-bisque">
+            <nav class="navbar navbar-expand-sm form-inline">
                 <div class="container">
                     <img src="img/logo.png" class="d-none d-md-block" id="logo"></div>
                     <div class="collapse navbar-collapse" id="navbarNav">
@@ -23,19 +22,13 @@
                                 <a class="nav-link" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Sobre nós</a>
+                                <a class="nav-link" href="#">Iniciação Científica</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Causas</a>
+                                <a class="nav-link" href="#">Projetos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Eventos</a>
-                            </li>
-                            <li class="nav-item">
-                                    <a class="nav-link" href="#">Blog</a>
-                            </li>
-                            <li class="nav-item">
-                                    <a class="nav-link" href="#">Contato</a>
+                                <a class="nav-link" href="#">Login</a>
                             </li>
                         </ul>
                     </div>
@@ -46,7 +39,7 @@
     <div class="bginicial">
         <div class="container">
             <div class="col-md-12 text-center content">
-                <h1>ENACTUS MAUA</h1>
+                <h1>PROJECT DISPLAYER MAUA</h1>
                 <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur sed, sequi ipsa eligen</h3>
             </div>
         </div>
