--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
                 <div class="container">
                     <img src="img/logo.png" class="d-none d-md-block" id="logo">
                 </div>
-                <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
-                    <i class="fas fa-bars text-white"></i>
-                </button>
+                <div class="navbar-toggler d-inline-flex" data-toggle="collapse">
+                    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
+                        <i class="fas fa-bars text-white"></i>
+                    </button>
+                    <div class="container">
+                        <img src="img/logo.png" class="navbar-toggler w-75 float-right" data-toggle="collapse">
+                    </div>
+                </div>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
