--- a/index.html
+++ b/index.html
@@ -5,27 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Project Displayer MAUA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" 
-        integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" 
-        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header id="header_area">
         <div class="container">
-            <nav class="navbar navbar-expand-sm form-inline">
+            <nav class="navbar navbar-expand-sm form-inline no-padding">
                 <div class="container">
                     <img src="img/logo.png" class="d-none d-md-block" id="logo">
                 </div>
-                <div class="navbar-toggler d-inline-flex" data-toggle="collapse">
+                <div class="navbar-toggler d-inline-flex no-padding mobile-nav" data-toggle="collapse">
                     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
                         <i class="fas fa-bars text-white"></i>
                     </button>
-                    <div class="container">
-                        <img src="img/logo.png" class="navbar-toggler w-75 float-right" data-toggle="collapse">
-                    </div>
+                    <img src="img/logo.png" class="navbar-toggler minilogo" data-toggle="collapse">
                 </div>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
