not building custom js and jquery

--- a/src/index.html
+++ b/src/index.html
@@ -11,17 +11,11 @@
   <title>Projeto IC</title>
 
   <link rel="shortcut icon" href="assets/img/logo-maua.ico" type="image/x-icon">
-  <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-
-  <!-- AOS CSS Core -->
-  <link href="assets/css/aos.css" rel="stylesheet">
-
   <!-- Google Fonts CSS -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet"> 
 
   <!-- Custom CSS -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 
 </head>
 
@@ -104,18 +98,13 @@
       <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
     </div>
   </footer>
-  <script src="assets/js/jquery.min.js"></script>
-  <script src="assets/js/popper.min.js"></script>
-  <script src="assets/js/bootstrap.min.js"></script>
-  <script src="assets/js/aos.js"></script>
+  <script src="app.js"></script>
   <script>
     AOS.init({
       easing: 'ease-out-back',
       duration: 1000
     });
   </script>
-  <!-- Custom JavaScript for this theme -->
-  <script src="assets/js/scrolling-nav.js"></script>
 
 </body>
 
