--- a/src/index.html
+++ b/src/index.html
@@ -10,19 +10,11 @@
 
   <title>Projeto IC</title>
 
-  <link rel="shortcut icon" href="assets/img/logo-maua.ico" type="image/x-icon">
-  <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-  <!-- AOS CSS Core -->
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
+  <link rel="shortcut icon" href="img/logo-maua.ico" type="image/x-icon">
+  <link rel="stylesheet" href="css/deps.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/app.min.css" rel="stylesheet">  
   <!-- Google Fonts CSS -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet"> 
-
-  <!-- Custom CSS -->
-  <link href="css/style.css" rel="stylesheet">
 
 </head>
 
@@ -31,7 +23,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top text-right" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/img/logo-maua.png"></a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="./img/logo-maua.png"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -105,25 +97,14 @@
       <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
     </div>
   </footer>
-
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="js/app.min.js"></script>
+  <script src="js/deps.min.js"></script>
   <script>
     AOS.init({
       easing: 'ease-out-back',
       duration: 1000
     });
   </script>
-  <!-- Custom JavaScript for this theme -->
-  <script src="js/scrolling-nav.js"></script>
 
 </body>
 
