--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
   </nav>
   <!-- Content -->
   <section id="about">
-    <div class="container" data-aos="fade-left" data-aos-mirror="true">
+    <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto text-right text-white">
           <h2>About this page</h2>
@@ -97,14 +97,8 @@
       <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
     </div>
   </footer>
-  <script src="js/app.min.js"></script>
   <script src="js/deps.min.js"></script>
-  <script>
-    AOS.init({
-      easing: 'ease-out-back',
-      duration: 1000
-    });
-  </script>
+  <script src="js/app.min.js"></script>
 
 </body>
 
