--- a/src/index.html
+++ b/src/index.html
@@ -12,16 +12,16 @@
 
   <link rel="shortcut icon" href="img/logo-maua.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/deps.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/app.min.css" rel="stylesheet">  
+  <link rel="stylesheet" href="css/app.min.css" rel="stylesheet">
   <!-- Google Fonts CSS -->
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
 
 </head>
 
 <body id="page-top">
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top text-right" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top text-right" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="./img/logo-maua.png"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
@@ -48,19 +48,14 @@
   </nav>
   <!-- Content -->
   <section id="about">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-8 mx-auto text-right text-white">
-          <h2>About this page</h2>
-          <p class="lead">This is a great place to talk about your webpage. This template is purposefully unstyled so
-            you can use it as a boilerplate or starting point for you own landing page designs! This template features:
+        <div class="col-lg-8 mx-auto text-right text-white justify-content-end">
+          <h2 class="text-warning font-weight-bold">Iniciação Científica</h2>
+          <p class="lead text-right mt-2 w-50 float-right">Participe de um projeto de pesquisa em qualquer área do conhecimento, sempre
+            com a orientação de um pesquisador experiente.
           </p>
           <ul>
-            <li>Clickable nav links that smooth scroll to page sections</li>
-            <li>Responsive behavior when clicking nav links perfect for a one page website</li>
-            <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
-            <li>Minimal custom CSS so you are free to explore your own unique design options</li>
-          </ul>
         </div>
       </div>
     </div>
