--- a/src/index.html
+++ b/src/index.html
@@ -34,10 +34,7 @@
             <a class="nav-link js-scroll-trigger" href="#about">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Iniciação Científica</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Projetos</a>
+            <a class="nav-link js-scroll-trigger" href="#cards">Iniciação Científica</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Login</a>
@@ -52,7 +49,8 @@
       <div class="row">
         <div class="col-lg-8 mx-auto text-right text-white justify-content-end">
           <h2 class="text-warning font-weight-bold">Iniciação Científica</h2>
-          <p class="lead text-right mt-2 w-50 float-right">Participe de um projeto de pesquisa em qualquer área do conhecimento, sempre
+          <p class="lead text-right mt-2 w-50 float-right">Participe de um projeto de pesquisa em qualquer área do
+            conhecimento, sempre
             com a orientação de um pesquisador experiente.
           </p>
           <ul>
@@ -61,28 +59,37 @@
     </div>
   </section>
 
-  <section id="services" class="bg-light">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <h2>Services we offer</h2>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita
-            quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore
-            ut velit dignissimos.</p>
-        </div>
+  <section id="cards" class="bg-light p-0 w-100">
+    <h2 class="m-5">Iniciações Científicas</h2>
+    <div class="container d-inline-flex overflow-auto">
+      <div class="card card-color-0 mx-5">
+        <div class="border"></div>
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53148/deathtostock-00.jpg" />
+        <h1>Hey now, you're an allstar</h1>
+      </div>
+      <div class="card card-color-2 mx-5">
+        <div class="border"></div>
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53148/deathtostock-02.jpg" />
+        <h1>Hey now, you're a rock star</h1>
+      </div>
+      <div class="card card-color-1 mx-5">
+        <div class="border"></div>
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53148/deathtostock-01.jpg" />
+        <h1>Get your game on, go play</h1>
+      </div>
+      <div class="card card-color-3 mx-5">
+        <div class="border"></div>
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53148/deathtostock-03.jpg" />
+        <h1>Get the show on, get paid</h1>
       </div>
     </div>
-  </section>
 
-  <section id="contact">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <h2>Contact us</h2>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor,
-            provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa
-            exercitationem, in, quo totam.</p>
-        </div>
+    <div id="cover" class="cover"></div>
+
+    <div id="open-content" class="open-content">
+      <a href="#" id="close-content" class="close-content"><span class="x-1"></span><span class="x-2"></span></a>
+      <img id="open-content-image" src="" />
+      <div class="text" id="open-content-text">
       </div>
     </div>
   </section>
