--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
   </nav>
   <!-- Content -->
   <section id="about">
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto text-right text-white justify-content-end">
           <h2 class="text-warning font-weight-bold">Iniciação Científica</h2>
@@ -59,28 +59,30 @@
     </div>
   </section>
 
-  <section id="cards" class="bg-light p-0 w-100">
+  <section id="cards" class="bg-light py-0">
     <h2 class="m-5">Iniciações Científicas</h2>
-    <div class="container d-inline-flex overflow-auto">
-      <div class="card card-color-0 mx-5">
-        <div class="border"></div>
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53148/deathtostock-00.jpg" />
-        <h1>Hey now, you're an allstar</h1>
-      </div>
-      <div class="card card-color-2 mx-5">
-        <div class="border"></div>
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53148/deathtostock-02.jpg" />
-        <h1>Hey now, you're a rock star</h1>
-      </div>
-      <div class="card card-color-1 mx-5">
-        <div class="border"></div>
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53148/deathtostock-01.jpg" />
-        <h1>Get your game on, go play</h1>
-      </div>
-      <div class="card card-color-3 mx-5">
-        <div class="border"></div>
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53148/deathtostock-03.jpg" />
-        <h1>Get the show on, get paid</h1>
+    <div class="container">
+      <div class="row justify-content-center justify-content-sm-between">
+        <div class="card card-color-0 mx-1 col-md-3 col-sm-12">
+          <div class="border"></div>
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53148/deathtostock-00.jpg" />
+          <p class="text-left">Hey now, you're an allstar</p>
+        </div>
+        <div class="card card-color-2 mx-1 col-md-3 col-sm-12">
+          <div class="border"></div>
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53148/deathtostock-02.jpg" />
+          <p>Hey now, you're a rock star</p>
+        </div>
+        <div class="card card-color-1 mx-1 col-md-3 col-sm-12">
+          <div class="border"></div>
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53148/deathtostock-01.jpg" />
+          <p>Get your game on, go play</p>
+        </div>
+        <div class="card card-color-3 mx-1 col-md-3 col-sm-12">
+          <div class="border"></div>
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53148/deathtostock-03.jpg" />
+          <p>Get the show on, get paid</p>
+        </div>
       </div>
     </div>
 
