--- a/src/index.html
+++ b/src/index.html
@@ -46,21 +46,33 @@
   <!-- Content -->
   <section id="about">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mx-auto text-right text-white justify-content-end">
-          <h2 class="text-warning font-weight-bold">Iniciação Científica</h2>
-          <p class="lead text-right mt-2 w-50 float-right">Participe de um projeto de pesquisa em qualquer área do
-            conhecimento, sempre
-            com a orientação de um pesquisador experiente.
-          </p>
-          <ul>
-        </div>
+      <div class="text-right text-white justify-content-end align-items-center">
+        <h2 class="text-warning font-weight-bold">Iniciação Científica</h2>
+        <p class="lead text-right float-right mt-4">Participe de um projeto de pesquisa em qualquer área do
+          conhecimento, sempre
+          com a orientação de um pesquisador experiente.
+        </p>
       </div>
     </div>
   </section>
 
   <section id="cards" class="bg-light py-0">
-    <h2 class="m-5">Iniciações Científicas</h2>
+    <h2 class="px-5 py-5">Iniciações Científicas</h2>
+    <div class="input-group-prepend ml-5 mb-5">
+      <button class="btn btn-outline-dark dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true"
+        aria-expanded="false">Filtrar por área</button>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="#">Educação em Engenharia</a>
+        <a class="dropdown-item" href="#">Engenharia Civil</a>
+        <a class="dropdown-item" href="#">Engenharia Elétrica, Eletrônica,
+          Controle e Automação, e Computação</a>
+        <a class="dropdown-item" href="#">Engenharia de Materiais</a>
+        <a class="dropdown-item" href="#">Engenharia Mecânica</a>
+        <a class="dropdown-item" href="#">Engenharia Química</a>
+        <a class="dropdown-item" href="#">Engenharia de Alimentos</a>
+        <a class="dropdown-item" href="#">Engenharia de Produção</a>
+      </div>
+    </div>
     <div class="container">
       <div class="row justify-content-center justify-content-sm-between">
         <div class="card card-color-0 mx-1 col-md-3 col-sm-12">
@@ -68,17 +80,27 @@
           <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53148/deathtostock-00.jpg" />
           <p class="text-left">Hey now, you're an allstar</p>
         </div>
-        <div class="card card-color-2 mx-1 col-md-3 col-sm-12">
+        <div class="card card-color-1 mx-1 col-md-3 col-sm-12">
           <div class="border"></div>
           <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53148/deathtostock-02.jpg" />
           <p>Hey now, you're a rock star</p>
         </div>
-        <div class="card card-color-1 mx-1 col-md-3 col-sm-12">
+        <div class="card card-color-2 mx-1 col-md-3 col-sm-12">
           <div class="border"></div>
           <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53148/deathtostock-01.jpg" />
           <p>Get your game on, go play</p>
         </div>
-        <div class="card card-color-3 mx-1 col-md-3 col-sm-12">
+        <div class="card card-color-0 mx-1 col-md-3 col-sm-12">
+          <div class="border"></div>
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53148/deathtostock-03.jpg" />
+          <p>Get the show on, get paid</p>
+        </div>
+        <div class="card card-color-1 mx-1 col-md-3 col-sm-12">
+          <div class="border"></div>
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53148/deathtostock-03.jpg" />
+          <p>Get the show on, get paid</p>
+        </div>
+        <div class="card card-color-2 mx-1 col-md-3 col-sm-12">
           <div class="border"></div>
           <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53148/deathtostock-03.jpg" />
           <p>Get the show on, get paid</p>
