--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -19,43 +19,56 @@
     <title>React App</title>
   </head>
   <body>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <!--<a class="navbar-brand text-white" href="#">Navbar</a>-->
-        <img src="./src/logo-maua.png" class="navbar-brand" >
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fas fa-bars text-white"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home 
-                        <span class="sr-only">(current)</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Iniciação Científica</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Projetos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Login</a>
-                </li>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top text-right" id="mainNav">
+        <div class="container">
+          <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="./src/logo-maua.png"
+            ></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+            aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="#about">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="#services">Iniciação Científica</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="#contact">Projetos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Login</a>
+              </li>
             </ul>
+          </div>
         </div>
-    </nav>
-
-    <div class="banner"> 
-        <div class="bg-image"></div>
-        <div class="bg-text">
-            <h2>About this page</h2>
-            <p>This is a great place to talk about your webpage. This template is purposefully unstyled so you can use it as a boilerplate or starting point for you own landing page designs! This template features</p>
+      </nav>
+      <!-- Content -->
+      <section id="about">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-8 mx-auto text-right text-white justify-content-end">
+              <h2 class="text-warning font-weight-bold">Iniciação Científica</h2>
+              <p class="lead text-right mt-2 w-50 float-right">Participe de um projeto de pesquisa em qualquer área do conhecimento, sempre
+                com a orientação de um pesquisador experiente.
+              </p>
+              <ul>
+            </div>
+          </div>
         </div>
-    </div>
+      </section>
 
     <div class="container">
         <div id="react" class="row"></div>
     </div>
+
+    <footer class="py-5 bg-dark">
+        <div class="container">
+          <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+        </div>
+      </footer>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
