pre-grid display

--- a/src/index.html
+++ b/src/index.html
@@ -61,15 +61,15 @@
       <button class="btn btn-outline-dark dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true"
         aria-expanded="false">Filtrar por área</button>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Educação em Engenharia</a>
-        <a class="dropdown-item" href="#">Engenharia Civil</a>
-        <a class="dropdown-item" href="#">Engenharia Elétrica, Eletrônica,
+        <a class="dropdown-item btn-outline-dark">Educação em Engenharia</a>
+        <a class="dropdown-item btn-outline-dark">Engenharia Civil</a>
+        <a class="dropdown-item btn-outline-dark">Engenharia Elétrica, Eletrônica,
           Controle e Automação, e Computação</a>
-        <a class="dropdown-item" href="#">Engenharia de Materiais</a>
-        <a class="dropdown-item" href="#">Engenharia Mecânica</a>
-        <a class="dropdown-item" href="#">Engenharia Química</a>
-        <a class="dropdown-item" href="#">Engenharia de Alimentos</a>
-        <a class="dropdown-item" href="#">Engenharia de Produção</a>
+        <a class="dropdown-item btn-outline-dark">Engenharia de Materiais</a>
+        <a class="dropdown-item btn-outline-dark">Engenharia Mecânica</a>
+        <a class="dropdown-item btn-outline-dark">Engenharia Química</a>
+        <a class="dropdown-item btn-outline-dark">Engenharia de Alimentos</a>
+        <a class="dropdown-item btn-outline-dark">Engenharia de Produção</a>
       </div>
     </div>
     <div class="container">
@@ -154,8 +154,7 @@
     <div id="open-content" class="open-content">
       <a href="#" id="close-content" class="close-content"><span class="x-1"></span><span class="x-2"></span></a>
       <img id="open-content-image" src="" />
-      <div class="text" id="open-content-text">
-      </div>
+      <div class="text ml-0" id="open-content-text"></div>
     </div>
   </section>
 
