--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -21,7 +21,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top text-right" id="mainNav">
         <div class="container">
-          <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="./src/logo-maua.png"
+          <a class="navbar-brand js-scroll-trigger" href="#about"><img src="./src/logo-maua.png"
             ></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,13 +33,10 @@
                 <a class="nav-link js-scroll-trigger" href="#about">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#services">Iniciação Científica</a>
+                <a class="nav-link js-scroll-trigger" href="#react">Iniciação Científica</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#contact">Projetos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+                <a class="nav-link js-scroll-trigger" href="./content/add_card.html">Adicionar Projetos</a>
               </li>
             </ul>
           </div>
@@ -74,12 +71,5 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
-    <script id="__bs_script__">
-        document.write("<script async src='http://HOST:3001/browser-sync/browser-sync-client.js?v=2.26.3'><\/script>".replace("HOST", location.hostname));
-    </script>
   </body>
 </html>
