--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-right fixed-top " id="mainNav">
     <div class="container w-100">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="./img/logo-maua.png"></a>
+      <a class="navbar-brand js-scroll-trigger" href="#about"><img href="#about" src="./img/logo-maua.png"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
         <span class="navbar-toggler-icon"></span>
       </button>
