--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -15,6 +15,8 @@
   <link rel="stylesheet" href="css/app.min.css" rel="stylesheet">
   <!-- Google Fonts CSS -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" 
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
 </head>
 
@@ -46,7 +48,7 @@
   <section id="about">
     <div class="container">
       <div class="text-right text-white justify-content-end align-items-center">
-        <h2 class="text-warning font-weight-bold">Iniciação Científica</h2>
+        <h2 class="text-warning">Iniciação Científica</h2>
         <p class="lead text-right float-right mt-4">Participe de um projeto de pesquisa em qualquer área do
           conhecimento, sempre
           com a orientação de um pesquisador experiente.
@@ -158,9 +160,29 @@
     </div>
   </section>
 
-  <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+  <footer class="py-4 px-5 bg-dark">
+    <div class="container d-inline-flex">
+      <div class="col-3">
+          <a href="http://maua.br"><img src="https://www.maua.br/img/default/logo_maua.png" alt="" srcset=""></a>
+      </div>
+      <div class="col-7">
+          <p class="text-white">Acesse nossas redes sociais:</p>
+          <p class="text-white">
+            <a href="https://www.instagram.com/infomaua/"><i class="fab fa-instagram"></i></a>
+            <a href="http://blog.maua.br/?_ga=2.160610686.2131410068.1557862682-155817039.1554315108"><i class="fab fa-blogger-b"></i></a>
+            <a href="https://www.linkedin.com/school/479773/admin/updates"><i class="fab fa-linkedin-in"></i></a>
+            <a href="http://www.youtube.com/infomaua"><i class="fab fa-youtube"></i></a>
+            <a href="http://www.flickr.com/photos/infomaua"><i class="fab fa-flickr"></i></a>
+            <a href="https://twitter.com/InfoMaua"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.facebook.com/InstitutoMaua"><i class="fab fa-facebook"></i></a>
+        </p>
+      </div>
+      <div class="col-2">
+        <p class="m-0 text-right text-white">Feito com <i class="fas fa-heart text-danger"></i> por:</p>
+        <p class="m-0 text-right text-white"><a class="text-white" href="https://github.com/kikepola">Kikepola <i class="fab fa-github"></i></a></p>
+        <p class="m-0 text-right text-white"><a class="text-white" href="https://github.com/KevinYuki">KevinYuki <i class="fab fa-github"></i></a></p>
+        <p class="m-0 text-right text-white"><a class="text-white" href="https://github.com/GabrielCamp96">GabrielCamp96 <i class="fab fa-github"></i></a></p>
+      </div>
     </div>
   </footer>
   <script src="js/deps.min.js"></script>
