--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -13,10 +13,6 @@
     <link rel="shortcut icon" href="img/logo-maua.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/deps.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/app.min.css" rel="stylesheet">
-    <!-- Google Fonts CSS -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
 </head>
 
@@ -47,7 +43,8 @@
     <!-- Content -->
     <section id="about" class="">
         <div class="container">
-            <img src="img/giphy.gif">
+            <!-- <img src="img/giphy.gif"> -->
+            <img class="kenburns-bottom img-fluid" src="img/sky-space-dark-galaxy.jpg" alt="" srcset="">
             <div class="text-right text-white">
                 <h2 class="text-warning">Iniciação Científica</h2>
                 <p class="text-right float-right">Participe de um projeto de pesquisa em qualquer área do
@@ -86,91 +83,91 @@
                                 <div class="form-group">
                                     <div class="form-check">
                                         <label class="form-check-label" for="area1">
-                                            <input class="form-check-input" type="radio" name="area" id="area1">
+                                            <input class="form-check-input" type="checkbox" name="area" id="area1">
                                             Educação em Engenharia.
                                         </label>
                                     </div>
                                     <div class="form-check">
                                         <label class="form-check-label" for="area2">
-                                            <input class="form-check-input" type="radio" name="area" id="area2">
+                                            <input class="form-check-input" type="checkbox" name="area" id="area2">
                                             Materiais de Construção Civil.
                                         </label>
                                     </div>
                                     <div class="form-check">
                                         <label class="form-check-label" for="area3">
-                                            <input class="form-check-input" type="radio" name="area" id="area3">
+                                            <input class="form-check-input" type="checkbox" name="area" id="area3">
                                             Controle, Automação e Robótica Voltados para o Ensino e Pesquisa.
                                         </label>
                                     </div>
                                     <div class="form-check">
                                         <label class="form-check-label" for="area4">
-                                            <input class="form-check-input" type="radio" name="area" id="area4">
+                                            <input class="form-check-input" type="checkbox" name="area" id="area4">
                                             Núcleo de Sistemas Eletrônicos Embarcados.
                                         </label>
                                     </div>
                                     <div class="form-check">
                                         <label class="form-check-label" for="area5">
-                                            <input class="form-check-input" type="radio" name="area" id="area5">
+                                            <input class="form-check-input" type="checkbox" name="area" id="area5">
                                             Sistemas Mecatrônicos Inteligentes e Robótica (SMIR).
                                         </label>
                                     </div>
                                     <div class="form-check">
                                         <label class="form-check-label" for="area6">
-                                            <input class="form-check-input" type="radio" name="area" id="area6">
+                                            <input class="form-check-input" type="checkbox" name="area" id="area6">
                                             Ciência e Engenharia de Materiais.
                                         </label>
                                     </div>
                                     <div class="form-check">
                                         <label class="form-check-label" for="area7">
-                                            <input class="form-check-input" type="radio" name="area" id="area7">
+                                            <input class="form-check-input" type="checkbox" name="area" id="area7">
                                             Motores de Combustão Interna.
                                         </label>
                                     </div>
                                     <div class="form-check">
                                         <label class="form-check-label" for="area8">
-                                            <input class="form-check-input" type="radio" name="area" id="area8">
+                                            <input class="form-check-input" type="checkbox" name="area" id="area8">
                                             Processos de Fabricação e Projeto Mecânico.
                                         </label>
                                     </div>
                                     <div class="form-check">
                                         <label class="form-check-label" for="area9">
-                                            <input class="form-check-input" type="radio" name="area" id="area9">
+                                            <input class="form-check-input" type="checkbox" name="area" id="area9">
                                             Tratamento Biológico de Águas Residuárias.
                                         </label>
                                     </div>
                                     <div class="form-check">
                                         <label class="form-check-label" for="area10">
-                                            <input class="form-check-input" type="radio" name="area" id="area10">
+                                            <input class="form-check-input" type="checkbox" name="area" id="area10">
                                             Aplicação de Processos Oxidativos Avançados.
                                         </label>
                                     </div>
                                     <div class="form-check">
                                         <label class="form-check-label" for="area11">
-                                            <input class="form-check-input" type="radio" name="area" id="area11">
+                                            <input class="form-check-input" type="checkbox" name="area" id="area11">
                                             Sistemas Particularizados.
                                         </label>
                                     </div>
                                     <div class="form-check">
                                         <label class="form-check-label" for="area12">
-                                            <input class="form-check-input" type="radio" name="area" id="area12">
+                                            <input class="form-check-input" type="checkbox" name="area" id="area12">
                                             Aplicação de Micro-ondas em Processos Industriais.
                                         </label>
                                     </div>
                                     <div class="form-check">
                                         <label class="form-check-label" for="area13">
-                                            <input class="form-check-input" type="radio" name="area" id="area13">
+                                            <input class="form-check-input" type="checkbox" name="area" id="area13">
                                             Simulação de Fenômenos e Processos.
                                         </label>
                                     </div>
                                     <div class="form-check">
                                         <label class="form-check-label" for="area14">
-                                            <input class="form-check-input" type="radio" name="area" id="area14">
+                                            <input class="form-check-input" type="checkbox" name="area" id="area14">
                                             Desenvolvimento de Conservação de Produtos Alimentícios.
                                         </label>
                                     </div>
                                     <div class="form-check">
                                         <label class="form-check-label" for="area15">
-                                            <input class="form-check-input" type="radio" name="area" id="area15">
+                                            <input class="form-check-input" type="checkbox" name="area" id="area15">
                                             Comissionamento Virtual.
                                         </label>
                                     </div>
