--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -21,39 +21,60 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-right fixed-top " id="mainNav">
         <div class="container w-100">
-            <a class="navbar-brand js-scroll-trigger" href="#about"><img href="#about" src="./img/logo-maua.png"></a>
+            <a class="navbar-brand js-scroll-trigger" href="#home"><img href="#home" src="./img/logo-maua.png"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#about">Home</a>
+                        <a class="nav-link js-scroll-trigger" href="#home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#about">O que é IC?</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#cards">Iniciação Científica</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <!-- Content -->
-    <section id="about" class="">
-        <div class="container">
-            <!-- <img src="img/giphy.gif"> -->
-            <img class="kenburns-bottom img-fluid" src="img/sky-space-dark-galaxy.jpg" alt="" srcset="">
-            <div class="text-right text-white">
-                <h2 class="text-warning">Iniciação Científica</h2>
-                <p class="text-right float-right">Participe de um projeto de pesquisa em qualquer área do
-                    conhecimento, sempre
-                    com a orientação de um pesquisador experiente.
-                </p>
+    <section id="home" class="masthead">
+        <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+            <source src="img/media.io_Pexels Videos 1508628.mp4" type="video/mp4">
+        </video>
+        <div class="container h-100 content">
+            <div class="row h-100">
+                <div class="col-12 my-auto mr-5">
+                    <div class="masthead-content py-5 py-md-0 text-right mx-0">
+                        <h1 class=" mb-3 text-warning mr-5">Iniciação Científica</h1>
+                        <p class="mb-5 float-right mr-5">Participe de um projeto de pesquisa em qualquer área do
+                            conhecimento, sempre
+                            com a orientação de um pesquisador experiente.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
+
+    <section id="about" class="bg-light py-0 mx-0 overflow-hidden">
+        <div class="container h-100 content">
+            <div class="row h-100">
+                <div class="col-12 my-auto">
+                    <div class="py-5 py-md-0 mx-5">
+                        <h2 class=" mb-3 text-warning">O que é <span style="color: #004684;"><strong>Iniciação Científica?</strong></span></h2>
+                        <p class="mb-5 ml-5 text-justify">Iniciação científica é algo bacana e show para desenvolvimento acadêmico do aluno, recomendo muito!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="h-100 imgs">
+            <img class="img-fluid" src="img/40874751883_c6705f6c06_z.jpg">
+        </div>
+    </section>
+
 
     <section id="cards" class="bg-light py-0">
         <div class="py-4 row">
