--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -41,16 +41,15 @@
         </div>
     </nav>
     <!-- Content -->
-    <section id="home" class="masthead">
-        <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-            <source src="img/media.io_Pexels Videos 1508628.mp4" type="video/mp4">
-        </video>
+    <section id="home" class="masthead my-0 py-0">
+        <img src="img/28456604668_d7507b0a4e_z.jpg" class="p-0 m-0 overflow-hidden">
         <div class="container h-100 content">
             <div class="row h-100">
                 <div class="col-12 my-auto mr-5">
                     <div class="masthead-content py-5 py-md-0 text-right mx-0">
                         <h1 class=" mb-3 text-warning mr-5">Iniciação Científica</h1>
-                        <p class="mb-5 float-right mr-5">Participe de um projeto de pesquisa em qualquer área do
+                        <p class="mb-5 text-white float-right mr-5">Participe de um projeto de pesquisa em qualquer área
+                            do
                             conhecimento, sempre
                             com a orientação de um pesquisador experiente.</p>
                     </div>
@@ -59,19 +58,17 @@
         </div>
     </section>
 
-    <section id="about" class="bg-light py-0 mx-0 overflow-hidden">
-        <div class="container h-100 content">
-            <div class="row h-100">
-                <div class="col-12 my-auto">
-                    <div class="py-5 py-md-0 mx-5">
-                        <h2 class=" mb-3 text-warning">O que é <span style="color: #004684;"><strong>Iniciação Científica?</strong></span></h2>
-                        <p class="mb-5 ml-5 text-justify">Iniciação científica é algo bacana e show para desenvolvimento acadêmico do aluno, recomendo muito!</p>
-                    </div>
-                </div>
-            </div>
+    <section id="about" class="bg-white p-0">
+        <div class="images pt-1">
+            <img src="img/33964104428_e67e12b306_z.jpg" class="img1 img-fluid my-2 rounded">
+            <img src="img/40874751883_c6705f6c06_z.jpg" class="img2 img-fluid my-2 rounded">
+            <img src="img/27407950898_5cc4a969ce_z.jpg" class="img3 img-fluid my-2 rounded">
         </div>
-        <div class="h-100 imgs">
-            <img class="img-fluid" src="img/40874751883_c6705f6c06_z.jpg">
+        <div class="txt text-right">
+            <h2 class="mb-3 mr-5 text-warning">O que é <span style="color: #004684;"><strong>Iniciação
+                        Científica?</strong></span></h2>
+            <p class="mb-5 ml-5">Iniciação científica é algo bacana e show para desenvolvimento
+                acadêmico do aluno, recomendo muito!</p>
         </div>
     </section>
 
