--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -35,7 +35,7 @@
                         <a class="nav-link js-scroll-trigger" href="#about">O que é IC?</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#cards">Iniciação Científica</a>
+                        <a class="nav-link js-scroll-trigger" href="#portfolio">Iniciação Científica</a>
                     </li>
                 </ul>
             </div>
@@ -48,7 +48,7 @@
                 <div class="col-12 my-auto">
                     <div class="mr-4">
                         <h1 class="mb-3 text-warning">Iniciação Científica</h1>
-                        <p class="text-white">Participe de um projeto de pesquisa em qualquer área
+                        <p class="text-white float-right">Participe de um projeto de pesquisa em qualquer área
                             do
                             conhecimento, sempre
                             com a orientação de um pesquisador experiente.</p>
@@ -64,7 +64,7 @@
             <div class="skew"></div>
             <h2 class="mb-3 mr-5 text-warning">O que é <span style="color: #004684;"><strong>Iniciação
                         Científica?</strong></span></h2>
-            <p class="mb-5 ml-5">Iniciação científica é algo bacana e show para desenvolvimento
+            <p class="mr-5 float-right">Iniciação científica é algo bacana e show para desenvolvimento
                 acadêmico do aluno, recomendo muito!</p>
         </div>
     </section>
@@ -260,14 +260,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div id="cover" class="cover"></div>
-
-        <div id="open-content" class="open-content">
-            <a href="#" id="close-content" class="close-content"><span class="x-1"></span><span class="x-2"></span></a>
-            <img id="open-content-image" src="" />
-            <div class="text ml-0" id="open-content-text"></div>
         </div>
     </section>
 
