alguns textos e fonte roboto nos cards

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -48,10 +48,9 @@
                 <div class="col-12 my-auto">
                     <div class="mr-4">
                         <h1 class="mb-3 text-warning">Iniciação Científica</h1>
-                        <p class="text-white float-right">Participe de um projeto de pesquisa em qualquer área
-                            do
-                            conhecimento, sempre
-                            com a orientação de um pesquisador experiente.</p>
+                        <p class="text-white float-right">
+                            Conheça as pesquisas e inovações que são desenvolvidas no Instituto Mauá de Tecnologia.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -64,8 +63,10 @@
             <div class="skew"></div>
             <h2 class="mb-3 mr-5 text-warning">O que é <span style="color: #004684;"><strong>Iniciação
                         Científica?</strong></span></h2>
-            <p class="mr-5 float-right">Iniciação científica é algo bacana e show para desenvolvimento
-                acadêmico do aluno, recomendo muito!</p>
+            <p class="mr-5 float-right">
+                São estudos dirigidos por equipes capacitadas de professores e alunos visando a contribuição tecnológica
+                com projetos inovadores e de impacto social.  
+            </p>
         </div>
     </section>
 
